# immortal

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.rs  dump.rdb
immortal-macros/: Cargo.toml
immortal-macros/src/: lib.rs
proto/: immortal.proto
proto/common/: message.proto
proto/enums/: workflow.proto
proto/failure/: failure.proto
src/: client.rs  lib.rs  server.rs  worker.rs
src/activities/: test.rs
src/api/: mod.rs
src/api/v1/: mod.rs  run.rs  server.rs
src/models/: activity.rs  call.rs  client.rs  history.rs  mod.rs  notification.rs  serverless.rs  worker.rs  worker_temp.rs  workflow.rs
src/workflows/: test.rs
