[package]
name = "immortal"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = {version = "0.1",features=["sync"]}
prost-wkt = "0.6"
prost-wkt-types = "0.6"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
anyhow = "1.0.98"
thiserror = "2.0.12"
futures = "0.3.31"
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features=["env-filter"]}
derive_builder = "0.20.2"
tonic-health = "0.13.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
prost-types = "0.13.5"
axum = "0.8.4"
socketioxide = { version = "0.16.2", features = ["state"] }
tower-http = { version = "0.6.2", features = ["cors"] }
bb8-redis = "0.22.0"
redis = { version = "0.30", default-features = false, features = ["tokio-comp", "streams", "aio"] }
chrono = {version = "0.4.41", features=["serde"]}
schemars = {version = "0.8.22", features=["uuid1"]}
immortal-macros = { path = "immortal-macros" }
itertools = "0.14.0"
paste = "1.0.15"
const_format = "0.2.34"
tower = "0.5.2"
regex = "1.11.1"
dotenvy = "0.15.7"
console-subscriber = "0.4.1"
jemallocator = "0.5.4"
[build-dependencies]
tonic-build = "0.13"
prost-wkt-build = "0.6"

[[bin]]
name = "server"
path = "src/server.rs"



[[bin]]
name = "worker"
path = "src/worker.rs"

[[bin]]
name = "client"
path = "src/client.rs"

